# AlphaMacro

./: .gitignore  CMakeLists.txt  Prioritys.txt  README.md  partitions.csv  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1-n16r8v  sdkconfig.esp32-s3-devkitc-1-n16r8v.old  sdkconfig.esp32-s3-devkitc-1.old  sdkconfig.esp32-s3-devkitc-1a
components/lvgl_integration/: CMakeLists.txt  lvgl_integration.c  lvgl_macro_screen.c  lvgl_main_screen.c  lvgl_port_init.c  lvgl_screen_linker.c
components/lvgl_integration/include/: lvgl_integration.h  lvgl_intergration_types.h  lvgl_macro_screen.h  lvgl_screen_linker.h
components/rgbKeyboardLink/: CMakeLists.txt  concepts  rgbKeyboardLink.c  rgbKeyboardLinker.c  rgbMatrixDriver.c
components/rgbKeyboardLink/include/: rgbKeyboardLink.h  rgbKeyboardLinker.h  rgbKeyboardTypes.h  rgbMatrixDriver.h
components/usb_implementation/: CMakeLists.txt  network_macro_server.c  usb_implementation.c
include/: main.h
main/: idf_component.yml  main.c
src/: cdc_acm_callbacks.c  main.c  nmain.c  todo.md
